# edgewalker

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  aws-credentials-process.sh  environment.yml  poetry.toml  pyproject.toml
cdkinfra/: app.py  cdk.json
cdkinfra/edgewalker/: ewstack.py  job_vertices.py  neptune.py  networking.py
notebooks/: 01_try_glue_interactive_sessions.ipynb  02_process_common_crawl_into_neptune copy.ipynb  02_process_common_crawl_into_neptune.ipynb  03_wrangle_common_crawl_into_neptune.ipynb
terraform/accounts/edgewalker-dev/edgewalker-infra/: Makefile  main.tf  plan.tfout  provider.tf
terraform/modules/ew_graph/: glue.tf  input.tf  job_vertices.tf  local.tf  neptune.tf  network.tf
terraform/modules/ew_graph/src/: main.py
